name:                day4
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2023 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable day4
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:
              -Wall
              -Wcompat
              -Wincomplete-uni-patterns
              -Wredundant-constraints
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , parsec
                     , regex-applicative
                     , recursion-schemes
                     , lens
                     , mtl
                     , transformers
                     , QuickCheck

